Raise FrozenError from IO::Buffer#free and IO::Buffer#resize on a frozen buffer

Both operations release or reallocate the memory the buffer references, so freezing a buffer did not make it immutable: its contents could still be made to disappear or move afterwards.

The check is added in method-level wrappers, leaving the public C API unchanged. #resize already had one. #free did not, so this adds it, and the struct-level io_buffer_free() is renamed to io_buffer_release() to free the name.

[Bug #22219]